Release history for {{ $dist->name }}:

{{$NEXT}}
  [Bug Fixes]
  - Handle sections with "=for Test::MixedScripts".

  [Tests]
  - Added more author tests.

v0.2.0    2025-08-04 17:05:24+01:00 Europe/London
  [Bug Fixes]
  - No Recent Changes section will be added if there are no entries, GH#5.

  - The "pod" type README now works.

  - Handle sections with "=for stopwords" and "=for Pod::Coverage", GH#6.

  [Enhancements]
  - Extra "=pod" and "=cut" directives are removed from the returned POD.

  - Added encoding option to configure the default text encoding.

  - Added regions option to configure regions to include.

  [Other]
  - Fixed prerequisites.

  - Reformatted test scripts.

v0.1.2    2025-08-02 11:47:45+01:00 Europe/London
  [Tests]
  - Fix prerequisites for tests.

v0.1.1    2025-08-01 18:12:49+01:00 Europe/London
  [Enhancements]
  - Pod::Weaver::Section::Requirements will refer uses to the `cpanfile` or `META.json/yml` files for the full list of
    prerequisites.

  [Bug Fixes]
  - Fixed a bug with variable parameters in the after_release method.

  - Fixed the formatting of the date in the RECENT CHANGES section in Pod::Weaver::Section::Requirements.

  [Documentation]
  - Added a sample of what the INSTALLATION section looks like in Pod::Weaver::Section::InstallationInstructions.

  - Fixed typos.

v0.1.0    2025-08-01 14:44:05+01:00 Europe/London
  - Initial version released.